--- a/Capstone on students dropout and success rate.ipynb
+++ b/Capstone on students dropout and success rate.ipynb
@@ -9050,25 +9050,25 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "84a2d34d",
+   "cell_type": "markdown",
+   "id": "046ed448",
    "metadata": {},
    "source": [
-    "Logistic :7640\n",
-    "Random Forest :0.7658\n",
-    "Decision Tree :0.7153\n",
-    "SVM :0.6602\n",
-    "Naives Bayes :0.7410\n",
-    "KNN ball_tree :0.6648\n",
-    "KNN kd_tree :0.7410\n",
-    "Ada Boost :0.7750\n",
-    "Gradient Boost :0.7878\n",
+    "Logistic :7640,\n",
+    "Random Forest :0.7658, \n",
+    "Decision Tree :0.7153, \n",
+    "SVM :0.6602, \n",
+    "Naives Bayes :0.7410, \n",
+    "KNN ball_tree :0.6648,\n",
+    "KNN kd_tree :0.7410, \n",
+    "Ada Boost :0.7750, \n",
+    "Gradient Boost :0.7878, \n",
     "XG Boost :0.7952"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "59d31364",
+   "cell_type": "markdown",
+   "id": "f4c33423",
    "metadata": {},
    "source": [
     "Conclusion\n",
